# dowser

./: .gitmodules  CMakeLists.txt  analysis.hpp  changelist.md  changelist.txt  license.txt  main.cpp  output.hpp  process.hpp  readme.md  test-dowser-output.scd  window.hpp
.github/: FUNDING.yml
lib/: argh.h
src/: analysis.hpp  main.cpp  output.cpp  output.hpp  output_format.hpp  peaks.hpp  peaks_watershed.hpp  process.hpp  process_config.hpp  test_watershed.cpp  window.hpp
